--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,13 @@
 dataset/gtsrb/GTSRB/
 dataset/gtsrb/models
+dataset/cifar10/models
+dataset/imagenet/models
+dataset/imagenet/train
+dataset/imagenet/val
+dataset/imagenet/tensorpack
+dataset/imagenet/backup
+dataset/imagenet/devkit
+dataset/imagenet/extract*
+experiment_data/
 *.pyc
 temp
